--- a/package.json
+++ b/package.json
@@ -4,14 +4,24 @@
   "main": "dist/dimlit.js",
   "license": "MIT",
   "dependencies": {
-    "babylonjs": "^4.2.1",
-    "esbuild": "^0.14.23"
+    "aframe": "^1.3.0",
+    "aframe-react": "^4.4.0",
+    "esbuild": "^0.14.23",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "typescript": "^4.5.5"
+    "@types/aframe": "^1.2.0",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "mock-browser": "^0.92.14",
+    "node-window-polyfill": "^1.0.2",
+    "puppeteer": "^13.4.0",
+    "typescript": "^4.5.5",
+    "window-mock": "^0.1.0"
   },
   "scripts": {
-    "dev": "cp -rp public/* dist && esbuild src/index.ts --bundle --sourcemap --servedir=dist --outfile=dist/dimlit.js",
-    "build": "cp -rp public/* dist && esbuild src/index.ts --bundle --minify --sourcemap --outfile=dist/dimlit.js"
+    "dev": "cp -rp public/* dist && esbuild src/index.tsx --bundle --sourcemap --servedir=dist --outfile=dist/dimlit.js",
+    "build": "cp -rp public/* dist && esbuild src/index.tsx --bundle --minify --sourcemap --outfile=dist/dimlit.js"
   }
 }
