Get a cool JSX version working

--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
   "scripts": {
     "dev": "cp -rp public/* dist && esbuild src/index.tsx --bundle --sourcemap --servedir=dist --outfile=dist/dimlit.js",
     "build": "cp -rp public/* dist && esbuild src/index.tsx --bundle --minify --sourcemap --outfile=dist/dimlit.js",
+    "deploy": "aws s3 sync --exclude .DS_Store dist s3://dimlit.space",
     "types": "esbuild src/getComponents.ts --bundle --outfile=dist/getComponents.js && node ./generateTypes.js"
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "singleQuote": true,
+    "printWidth": 150
   }
 }
