--- a/package.json
+++ b/package.json
@@ -4,21 +4,16 @@
   "main": "dist/dimlit.js",
   "license": "MIT",
   "dependencies": {
-    "aframe": "^1.3.0",
-    "aframe-react": "^4.4.0",
-    "esbuild": "^0.14.23",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "aframe": "^1.3.0"
   },
   "devDependencies": {
     "@types/aframe": "^1.2.0",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "mock-browser": "^0.92.14",
-    "node-window-polyfill": "^1.0.2",
-    "puppeteer": "^13.4.0",
+    "@types/jsdom": "^16.2.14",
+    "esbuild": "^0.14.24",
+    "jsdom": "^19.0.0",
+    "three": "^0.138.2",
     "typescript": "^4.5.5",
-    "window-mock": "^0.1.0"
+    "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
     "dev": "cp -rp public/* dist && esbuild src/index.tsx --bundle --sourcemap --servedir=dist --outfile=dist/dimlit.js",
