Continue to build out scene

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,9 +28,13 @@
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./",                                     /* Specify the base directory to resolve non-relative module names. */
-    "paths": {"*": ["types/*"]},                         /* Specify a set of entries that re-map imports to additional lookup locations. */
+    "paths": {
+      "super-three": ["./node_modules/@types/three"],
+      "aframe-rapier/*": ["./node_modules/aframe-rapier/*"],
+      "*": ["types/*"]
+    },                                                   /* Specify a set of entries that re-map imports to additional lookup locations. */ 
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
-    "typeRoots": ["types", "node_modules/@types"],       /* Specify multiple folders that act like `./node_modules/@types`. */
+    "typeRoots": ["types", "node_modules/@types", "node_modules/aframe-rapier"],       /* Specify multiple folders that act like `./node_modules/@types`. */
     "types": ["jsx", "xmlhttprequest"],                  /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "resolveJsonModule": true,                        /* Enable importing .json files */
