--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "aframe": "^1.3.0",
-    "aframe-rapier": "link:../aframe-rapier"
+    "aframe-rapier": "link:../aframe-rapier",
+    "auto-bind": "^5.0.1"
   },
   "devDependencies": {
     "@types/aframe": "^1.2.0",
